--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ yarn-error.log*
 
 # ignore firebase directories and files
 firebase/
+.firebase/
 .firebaserc
 firebase.json
 firestore.rules
+firestore.indexes.json
