--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "firebase": "^6.3.4",
     "slugify": "^1.3.4",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
